- Cambios a la estructura HTML.

--- a/index.html
+++ b/index.html
@@ -37,20 +37,141 @@
         <div class="row">
             <div class="column">
                 <h1>A CERCA DE NOSOTROS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis eligendi ipsam ex, odit quisquam sint sed eos non! Distinctio quas ea hic expedita tempore adipisci autem facilis quo minima?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis eligendi ipsam ex, odit
+                    quisquam sint sed eos non! Distinctio quas ea hic expedita tempore adipisci autem facilis quo
+                    minima?</p>
                 <div class="img-contenedor">
                     <img src="img/logos/logo-bahaus.png" alt="">
                 </div>
             </div>
         </div><!-- row -->
     </section><!-- section.hero -->
+
+
     <section class="nuestra-universidad">
-        <h2>NUESTRA UNIVERSIDAD</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae alias quam, voluptates impedit ullam aperiam modi magnam voluptate sint libero laboriosam, provident reiciendis qui laudantium ratione, quasi velit deserunt sapiente?</p>
-        <div class="img-contenedor">
-            <img src="img/logos/ucal-logo.jpg" alt="">
-        </div>
-    </section>
+        <div class="row">
+            <div class="column">
+                <h2>NUESTRA UNIVERSIDAD</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae alias quam, voluptates impedit
+                    ullam aperiam modi magnam voluptate sint libero laboriosam, provident reiciendis qui laudantium
+                    ratione, quasi velit deserunt sapiente?</p>
+            </div>
+            <div class="column">
+                <div class="img-contenedor">
+                    <img src="img/logos/ucal-logo.jpg" alt="">
+                </div>
+            </div>
+        </div><!-- .row -->
+    </section><!-- section.nuestra-universidad -->
+
+
+    <section class="nuestro-equipo">
+        <div class="row">
+            <div class="column">
+                <a href="#" target="_blank" rel="noopener noreferrer"></a>
+                <div class="descripcion">
+                    <h3>
+                        LAURA Y SAM
+                    </h3>
+                    <p class="texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
+                        magnam distinctio
+                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
+                    </p>
+                    <div class="redes-sociales">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <a href="#" target="_blank" rel="noopener noreferrer"></a>
+                <div class="descripcion">
+                    <h3>
+                        ALIBABA
+                    </h3>
+                    <p class="texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
+                        magnam distinctio
+                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
+                    </p>
+                    <div class="redes-sociales">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <a href="#" target="_blank" rel="noopener noreferrer"></a>
+                <div class="descripcion">
+                    <h3>
+                        KAREN
+                    </h3>
+                    <p class="texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
+                        magnam distinctio
+                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
+                    </p>
+                    <div class="redes-sociales">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <a href="#" target="_blank" rel="noopener noreferrer"></a>
+                <div class="descripcion">
+                    <h3>
+                        JUANCITO
+                    </h3>
+                    <p class="texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
+                        magnam distinctio
+                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
+                    </p>
+                    <div class="redes-sociales">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <a href="#" target="_blank" rel="noopener noreferrer"></a>
+                <div class="descripcion">
+                    <h3>
+                        YBLIN
+                    </h3>
+                    <p class="texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
+                        magnam distinctio
+                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
+                    </p>
+                    <div class="redes-sociales">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div><!-- .row -->
+    </section><!-- section.nuestro-equipo -->
+
+
+
     <footer>
         <div class="row">
             <div class="column">
