--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="inicio">
     <header>
         <div class="menu-contenedor">
             <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for="menu-bar"></label>
             <span class="logo">
                 <img src="img/logos/logo-bahaus.png" alt="">
             </span>
@@ -23,160 +22,29 @@
             <nav class="menu nav-menu">
 
                 <ul class="top-menu">
-                    <li class="inicio"><a href="index.html">A CERCA DE</a></li>
-                    <li class="acerca-de"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
-                    <li class="sobre-mi"><a href="historia.html">HISTORIA</a></li>
-                    <li class="contacto"><a href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="inicio"><a href="index.html">INICIO</a></li>
+                    <li class="acerca-de"><a href="acerca-de.html">ACERCA DE</a></li>
+                    <li class="lo-que-somos"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
+                    <li class="historia"><a href="historia.html">HISTORIA</a></li>
+                    <li class="contactanos"><a href="contactanos.html">CONTÁCTANOS</a></li>
                     <li class="oficinas"><a href="oficinas.html">OFICINAS</a></li>
                 </ul>
             </nav>
-
+            <label class="icon-menu" for="menu-bar"><i class="fas fa-bars"></i></label>
         </div>
+        
     </header>
+
     <section class="hero">
-        <div class="row">
-            <div class="column">
-                <h1>A CERCA DE NOSOTROS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis eligendi ipsam ex, odit
-                    quisquam sint sed eos non! Distinctio quas ea hic expedita tempore adipisci autem facilis quo
-                    minima?</p>
-                <div class="img-contenedor">
-                    <img src="img/logos/logo-bahaus.png" alt="">
-                </div>
-            </div>
-        </div><!-- row -->
+        <div class="separador-superior"></div>
+        <div class="separador-inferior"></div>
     </section><!-- section.hero -->
 
-
-    <section class="nuestra-universidad">
-        <div class="row">
-            <div class="column">
-                <h2>NUESTRA UNIVERSIDAD</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae alias quam, voluptates impedit
-                    ullam aperiam modi magnam voluptate sint libero laboriosam, provident reiciendis qui laudantium
-                    ratione, quasi velit deserunt sapiente?</p>
-            </div>
+    <footer>
+        <div class="row row-full">
             <div class="column">
                 <div class="img-contenedor">
-                    <img src="img/logos/ucal-logo.jpg" alt="">
-                </div>
-            </div>
-        </div><!-- .row -->
-    </section><!-- section.nuestra-universidad -->
-
-
-    <section class="nuestro-equipo">
-        <div class="row">
-            <div class="column">
-                <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <div class="descripcion">
-                    <h3>
-                        LAURA Y SAM
-                    </h3>
-                    <p class="texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
-                        magnam distinctio
-                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
-                    </p>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-youtube"></i>
-                        <i class="fab fa-twitter"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <div class="descripcion">
-                    <h3>
-                        ALIBABA
-                    </h3>
-                    <p class="texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
-                        magnam distinctio
-                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
-                    </p>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <div class="descripcion">
-                    <h3>
-                        KAREN
-                    </h3>
-                    <p class="texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
-                        magnam distinctio
-                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
-                    </p>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <div class="descripcion">
-                    <h3>
-                        JUANCITO
-                    </h3>
-                    <p class="texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
-                        magnam distinctio
-                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
-                    </p>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <div class="descripcion">
-                    <h3>
-                        YBLIN
-                    </h3>
-                    <p class="texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus laudantium, ut
-                        magnam distinctio
-                        eveniet sunt error molestias cum illum vel quos nemo maiores ab voluptate. Sit quia corporis in.
-                    </p>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
-                    </div>
-                </div>
-            </div>
-
-        </div><!-- .row -->
-    </section><!-- section.nuestro-equipo -->
-
-
-
-    <footer>
-        <div class="row">
-            <div class="column">
-                <div class="img-content">
-                    <img src="img/logos/logo-bahaus.png" alt="">
+                    <img src="img/logos/LOGO BLANCO.png" alt="">
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
