--- a/oficinas.html
+++ b/oficinas.html
@@ -11,11 +11,10 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="oficinas">
     <header>
         <div class="menu-contenedor">
             <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for="menu-bar"></label>
             <span class="logo">
                 <img src="img/logos/logo-bahaus.png" alt="">
             </span>
@@ -23,21 +22,58 @@
             <nav class="menu nav-menu">
 
                 <ul class="top-menu">
-                    <li class="inicio"><a href="index.html">A CERCA DE</a></li>
-                    <li class="acerca-de"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
-                    <li class="sobre-mi"><a href="historia.html">HISTORIA</a></li>
-                    <li class="contacto"><a href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="inicio"><a href="index.html">INICIO</a></li>
+                    <li class="acerca-de"><a href="acerca-de.html">ACERCA DE</a></li>
+                    <li class="lo-que-somos"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
+                    <li class="historia"><a href="historia.html">HISTORIA</a></li>
+                    <li class="contactanos"><a href="contactanos.html">CONTÁCTANOS</a></li>
                     <li class="oficinas"><a href="oficinas.html">OFICINAS</a></li>
                 </ul>
             </nav>
-
+            <label class="icon-menu" for="menu-bar"><i class="fas fa-bars"></i></label>
         </div>
+
     </header>
-    <footer>
+
+    <section class="hero">
         <div class="row">
             <div class="column">
-                <div class="img-content">
+                <!-- logo container -->
+                <div class="img-contenedor">
                     <img src="img/logos/logo-bahaus.png" alt="">
+                </div>
+                <p class="texto">Oficinas: Av. Landivar #805</p>
+                <div class="redes-sociales">
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                </div>
+                <p class="texto">Lunes a Viernes</p>
+                <p class="horario">9:00am a 7:00pm</p>
+                <p class="texto">Sabado</p>
+                <p class="horario">9:00am a 12:00pm</p>
+                <p class="texto">Domingo</p>
+                <p class="horario">11:00am a 12:00pm</p>
+                <p class="texto">Suscribete para saber de las ultimas noticias y recetas en PAL DESEINGO</p>
+                <div class="btn btn-suscribete">
+                    <a href="" class="btn">Suscribete</a>
+                </div>
+            </div>
+    
+            <div class="column">
+                <!-- mapa -->
+                <div class="img-mapa img-contenedor">
+                    <img src="img/mapa google.jpg" alt="">
+                </div>
+            </div>
+        </div><!-- .contenedor -->
+    </section><!-- section.hero -->
+
+    <footer>
+        <div class="row row-full">
+            <div class="column">
+                <div class="img-contenedor">
+                    <img src="img/logos/LOGO BLANCO.png" alt="">
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
