- Cambio en el título de cada página

--- a/contactanos.html
+++ b/contactanos.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="recursos/font-awesome/css/all.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>CONTÁCTANOS</title>
 </head>
 
 <body class="contactanos">
