--- a/oficinas.html
+++ b/oficinas.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="recursos/font-awesome/css/all.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>OFICINAS</title>
 </head>
 
 <body class="oficinas">
